kube/auth_service.yaml
# Copyright 2017 Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: authservice
  labels:
    app: authservice
    service: authservice
spec:
  ports:
  - port: 50055
    targetPort: 50055
    protocol: TCP
    name: grpc
  selector:
    app: authservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice-v1
  labels:
    app: authservice
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
      version: v1
  template:
    metadata:
      labels:
        app: authservice
        version: v1
    spec:
      serviceAccountName: authservice-account
      containers:
      - name: authservice
        image: auth_service:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 50055
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice-v2
  labels:
    app: authservice
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
      version: v2
  template:
    metadata:
      labels:
        app: authservice
        version: v2
    spec:
      serviceAccountName: authservice-account
      containers:
      - name: authservice
        image: auth_service:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 50055
---
